--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/bootstrap/scss/bootstrap.scss",
               "src/assets/scss/main.scss",
               "src/styles.sass"
